Use -XX:AOTCacheOutput in cpumodel example